--- a/src/input.css
+++ b/src/input.css
@@ -15,6 +15,6 @@
         @apply border border-solid border-red-500;
     }
     .btn-primary{
-        @apply bg-orange-600 rounded-lg w-52 h-14 px-4 py-3 text-white font-bold;
+        @apply bg-orange-600 rounded-lg w-40 h-14 px-4 py-3 text-white font-bold hover:bg-orange-700;
     }
 }
